--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --color-text: hsl(172, 67%, 45%);
   --color-text-accent: hsl(183.8, 14.3%, 56.1%);
   --color-input-bg: hsl(188.6, 41.2%, 96.7%);
+  --color-btn-disabled: hsl(183.1, 78.7%, 23.9%);
 }
 
 * {
@@ -15,7 +16,12 @@
   padding: 0;
 }
 
-legend, fieldset, input, select, textarea, button {
+legend,
+fieldset,
+input,
+select,
+textarea,
+button {
   border: none;
   box-shadow: none;
   outline: none;
@@ -35,13 +41,19 @@ a:active {
   color: inherit;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
 }
 
 body {
   background-color: var(--color-body-bg);
   font-family: var(--font-primary);
+}
+
+.app-container {
+  max-width: 37.5rem;
+  margin: 0 auto;
 }
 
 header {
@@ -100,7 +112,7 @@ p {
   opacity: 0.35;
 }
 
-.tip-amount {
+.tip-percent {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -109,13 +121,13 @@ p {
   max-width: 100%;
 }
 
-.tip-amount p {
+.tip-percent p {
   margin-bottom: 0;
   flex-basis: 100%;
 }
 
-.tip-amount button,
-.tip-amount input {
+.tip-percent button,
+.tip-percent input {
   display: block;
   height: 48px;
   font-size: 24px;
@@ -128,12 +140,12 @@ p {
   max-width: calc(50% - 8px);
 }
 
-.tip-amount button.active {
+.tip-percent button.active {
   color: var(--color-input-txt);
   background: var(--color-text);
 }
 
-.tip-amount input {
+.tip-percent input {
   font-size: 24px;
   line-height: 36px;
   padding: 6px 15px;
@@ -144,8 +156,9 @@ p {
   caret-color: var(--color-text);
 }
 
-.tip-amount input::placeholder {
+.tip-percent input::placeholder {
   color: hsl(180, 17.6%, 40%);
+  opacity: 1;
 }
 
 .tip-amount-total {
@@ -181,7 +194,7 @@ p {
   align-items: center;
 }
 
-.tip + .tip {
+.tip+.tip {
   margin-top: 20px;
 }
 
@@ -198,6 +211,75 @@ button[type="reset"] {
   border-radius: 5px;
 }
 
+button[type="reset"]:disabled {
+  cursor: not-allowed;
+  background-color: var(--color-btn-disabled);
+}
+
+@media (min-width: 61.25em) {
+
+  .app-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 61.25rem;
+    min-height: 100vh;
+    padding: 0 30px;
+  }
+
+  header {
+    margin-top: auto;
+    margin-bottom: 88px;
+  }
+
+  main {
+    margin-bottom: auto;
+    padding-left: 48px;
+    border-radius: 25px;
+  }
+
+  form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .form-left {
+    height: 388px;
+    flex-basis: 379px;
+  }
+
+  .tip-amount-total {
+    padding: 40px;
+  }
+
+  .tip-amount-total {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+    height: 417px;
+    flex-basis: 413px;
+  }
 
 
+  .tip-percent button,
+  .tip-percent input {
+    flex-basis: calc(33.3333% - 16px);
+    max-width: calc(33.3333% - 16px);
+  }
 
+  .tip-percent input {
+    padding: 0 10px;
+  }
+
+  .tip-usd p,
+  .total-usd p {
+    font-size: 48px;
+    line-height: 71px;
+    letter-spacing: -1px;
+  }
+
+  button[type="reset"] {
+    margin-top: auto;
+  }
+
+}
