--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,12 @@
   --color-white: hsl(0, 0%, 100%);
   --color-label: hsl(185.8, 14.2%, 42.9%);
   --color-input-txt: hsl(183.2, 100%, 14.7%);
+  --color-input-error: hsl(12.6, 70.4%, 60.2%);
   --color-text: hsl(172, 67%, 45%);
   --color-text-accent: hsl(183.8, 14.3%, 56.1%);
   --color-input-bg: hsl(188.6, 41.2%, 96.7%);
   --color-btn-disabled: hsl(183.1, 78.7%, 23.9%);
+  --color-btn-hover: hsl(172.6, 61.3%, 76.7%);
 }
 
 * {
@@ -28,6 +30,10 @@ button {
   background: none;
   margin: 0;
   padding: 0;
+}
+
+button {
+  transition: background-color 0.5s ease-in-out;
 }
 
 a {
@@ -76,17 +82,17 @@ label,
 p {
   display: block;
   margin-bottom: 6px;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1rem;
+  line-height: 1.5rem;
   color: var(--color-label);
 }
 
 #bill,
 #people {
   width: 100%;
-  height: 48px;
-  font-size: 24px;
-  line-height: 36px;
+  height: 3rem;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
   padding-right: 17px;
   text-align: right;
   color: var(--color-input-txt);
@@ -94,7 +100,14 @@ p {
   background-color: var(--color-input-bg);
   background-position: top 16px left 20px;
   background-repeat: no-repeat;
+  border: 2px solid transparent;
   border-radius: 5px;
+  transition: border 0.5s ease-in-out;
+}
+
+#bill:focus,
+#people:focus {
+  border: 2px solid hsl(172.3, 67.2%, 45.5%);
 }
 
 #bill {
@@ -105,18 +118,32 @@ p {
   background-image: url(../images/icon-person.svg);
 }
 
-
 #bill::placeholder,
 #people::placeholder {
   color: var(--color-input-txt);
   opacity: 0.35;
 }
 
+#people.error {
+  border: 2px solid var(--color-input-error);
+}
+
+label[for="people"] {
+  display: flex;
+  justify-content: space-between;
+}
+
+label[for="people"] span {
+  color: var(--color-input-error);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
 .tip-percent {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  gap: 16px;
+  gap: 1rem;
   margin: 32px 0;
   max-width: 100%;
 }
@@ -129,9 +156,9 @@ p {
 .tip-percent button,
 .tip-percent input {
   display: block;
-  height: 48px;
-  font-size: 24px;
-  line-height: 36px;
+  height: 3rem;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
   cursor: pointer;
   color: var(--color-white);
   background: var(--color-input-txt);
@@ -146,19 +173,27 @@ p {
 }
 
 .tip-percent input {
-  font-size: 24px;
-  line-height: 36px;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
   padding: 6px 15px;
   text-align: right;
   cursor: default;
   color: var(--color-input-txt);
   background-color: var(--color-input-bg);
   caret-color: var(--color-text);
+  border: 2px solid transparent;
+  transition: border 0.5s ease-in-out;
+}
+
+.tip-percent input:focus {
+  border: 2px solid var(--color-text);
 }
 
 .tip-percent input::placeholder {
   color: hsl(180, 17.6%, 40%);
   opacity: 1;
+  letter-spacing: -0.0938rem;
+  text-align: center;
 }
 
 .tip-amount-total {
@@ -170,21 +205,21 @@ p {
 
 .tip-amount-total p {
   color: var(--color-text-accent);
-  font-size: 13px;
-  line-height: 19px;
+  font-size: 0.8125rem;
+  line-height: 1.1875rem;
 }
 
 .tip-amount-total p.amount {
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1rem;
+  line-height: 1.5rem;
   color: var(--color-white);
 }
 
 .tip-usd p,
 .total-usd p {
-  font-size: 32px;
-  line-height: 47px;
-  letter-spacing: -0.666667px;
+  font-size: 2rem;
+  line-height: 2.9375rem;
+  letter-spacing: -0.0417rem;
   color: var(--color-text);
 }
 
@@ -199,11 +234,11 @@ p {
 }
 
 button[type="reset"] {
-  height: 48px;
+  height: 3rem;
   width: 100%;
   margin-top: 32px;
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
   cursor: pointer;
   text-transform: uppercase;
   color: var(--color-input-txt);
@@ -215,6 +250,16 @@ button[type="reset"]:disabled {
   cursor: not-allowed;
   background-color: var(--color-btn-disabled);
 }
+
+
+@media (hover: hover) {
+  button:hover {
+    cursor: pointer;
+    color: var(--color-input-txt);
+    background-color: var(--color-btn-hover);
+  }
+}
+
 
 @media (min-width: 61.25em) {
 
@@ -244,8 +289,8 @@ button[type="reset"]:disabled {
   }
 
   .form-left {
-    height: 388px;
-    flex-basis: 379px;
+    height: 24.25rem;
+    flex-basis: 23.6875rem;
   }
 
   .tip-amount-total {
@@ -256,15 +301,14 @@ button[type="reset"]:disabled {
     display: flex;
     flex-direction: column;
     margin-top: 0;
-    height: 417px;
-    flex-basis: 413px;
+    height: 26.0625rem;
+    flex-basis: 25.8125rem;
   }
-
 
   .tip-percent button,
   .tip-percent input {
-    flex-basis: calc(33.3333% - 16px);
-    max-width: calc(33.3333% - 16px);
+    flex-basis: calc(33.3333% - 1rem);
+    max-width: calc(33.3333% - 1rem);
   }
 
   .tip-percent input {
@@ -273,9 +317,9 @@ button[type="reset"]:disabled {
 
   .tip-usd p,
   .total-usd p {
-    font-size: 48px;
-    line-height: 71px;
-    letter-spacing: -1px;
+    font-size: 3rem;
+    line-height: 4.4375rem;
+    letter-spacing: -0.0625rem;
   }
 
   button[type="reset"] {
